--- a/main/main.html
+++ b/main/main.html
@@ -2,37 +2,36 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./main.css">
     <title>CalcApp</title>
   </head>
   <body>
-    
-    <div>
-      <div>
-          <p>A</p>
-          <input id="aInputField" type="number">
-      </div>
-      <div>
-          <p>B</p>
-          <input id="bInputField" type="number">
-      </div>
-    </div>
-    
-    <div>
-        <input id="addButton" type="button" value="+" cmd="add">
-        <input id="minusButton" type="button" value="-" cmd="minus">
-        <input id="mulButton" type="button" value="x" cmd="mul">
-        <input id="divButton" type="button" value="/" cmd="div">
-        <input id="powButton" type="button" value="Pow" cmd="pow">
-    </div>
-
-    <div>
-        <p>Result</p>
-        <input id="resultInputField" type="text" readonly>
-    </div>
-
-    <div>
-        <input id="loadButton" type="button" value="Load">
-        <input id="saveButton" type="button" value="Save">
+    <div class="panel">
+        <div>
+            <div class="inputFieldBlock">
+                <p>A</p>
+                <input id="aInputField" type="number">
+            </div>
+            <div class="inputFieldBlock">
+                <p>B</p>
+                <input id="bInputField" type="number">
+            </div>
+        </div>
+        <div class="operandBlock">
+            <input id="addButton" type="button" value="+" cmd="add">
+            <input id="subButton" type="button" value="-" cmd="sub">
+            <input id="mulButton" type="button" value="x" cmd="mul">
+            <input id="divButton" type="button" value="/" cmd="div">
+            <input id="powButton" type="button" value="^" cmd="pow">
+        </div>
+        <div class="inputFieldBlock">
+            <p>Result</p>
+            <input id="resultInputField" type="text" readonly>
+        </div>
+        <div class="loadSaveBlock">
+            <input id="loadButton" type="button" value="Load">
+            <input id="saveButton" type="button" value="Save">
+        </div>
     </div>
     <script src = "./main.js" ></script>
   </body>
