implement service load save functionalities

--- a/main/main.html
+++ b/main/main.html
@@ -29,6 +29,8 @@
             <input id="resultInputField" type="text" readonly>
         </div>
         <div class="loadSaveBlock">
+            <p>User</p>
+            <input id="userInputField" type="text">
             <input id="loadButton" type="button" value="Load">
             <input id="saveButton" type="button" value="Save">
         </div>
