--- a/main/main.html
+++ b/main/main.html
@@ -28,11 +28,14 @@
             <p>Result</p>
             <input id="resultInputField" type="text" readonly>
         </div>
-        <div class="loadSaveBlock">
+        <div id="loadSaveSection" class="loadSaveBlock">
             <p>User</p>
             <input id="userInputField" type="text">
             <input id="loadButton" type="button" value="Load">
             <input id="saveButton" type="button" value="Save">
+        </div>
+        <div id="loadingSection" class="hide-loading">
+            <p>Please wait ...</p>
         </div>
     </div>
     <script src = "./main.js" ></script>
